client/src/components/css/OneArticle.css
body {
  font-family: 'Courier New', Courier, monospace;
  background-color: #fff;
}

.button-container {
  position: absolute;
  top: 30px;
  left: 80%;
  float: right;
  z-index: 300;
}

.postz {
  position: relative;
  top: 112px;
  right: 5%;
  margin-bottom: 40px;
  color: black;
  font-family: 'Courier New', Courier, monospace;
  font-size: 22px;
}

.pull-right hr {
  position: relative;
  top: 10px;
  left: 0px;
}

.label {
  padding: 0.5em 1em;
}

.pull-right {
  position: relative;
  top: 995px;
  text-align: center;
  display: inline-block;
  float: none !important;
}

.author {
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
  top: 6px;
  right: 43%;
  text-transform: uppercase;
  color: rgb(43, 54, 68);
  width: 30%;
  font-weight: 400;
  font-size: 20px;
}

.secondary form {
  left: 0px;
}

/*author name */
.bodys h4 {
  text-transform: uppercase;
  position: absolute;
  top: 12px;
  text-align: center;
  right: 61%;
  color: rgb(43, 54, 68);
  font-size: 20px;
  font-weight: 400;
}

.moment-on .clock {
  left: 69px;
  position: relative;
}

.media-left {
  position: absolute;
  left: 14em;
  top: 36px;
}

.media-left button {
  left: -7em;
  position: relative;
}

.media-body {
  display: flex;
  vertical-align: top;
  width: 100%;
  font-size: 1.2em;
  justify-content: space-evenly;
  flex-direction: row;
  top: -450px;
  z-index: 300;
  position: absolute;
}

.media-heading {
  z-index: 200;
  top: -26px;
  margin-bottom: 5px;
  font-size: 1.3em;
}

.secondary h5 {
  float: right;
  position: absolute;
  top: 1em;
  right: 8em;
  margin-right: 2em;
  color: #fff;
}

.media-body h4,
a {
  color: black;

}


.post-heading {
  color: black;
  text-align: center;
  left: -3em;
  position: relative;
  width: 100%;
  z-index: 500;
  align-self: center;
}


.oneArticle {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  position: absolute;
  top: 0px;
}

.img-responsive {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  top: 0px;
  left: 0px;

}

.bodys {
  position: absolute;
  width: 100%;
  top: 500px;
  height: 100vh;
  text-align: center;
}

.showcomments .footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  position: relative;
  width: 100%;
  margin-top: 10em;
  height: 30%;
  left: 0px;
}

.showcomments .footer .list-inline {
  position: relative;
  top: -11em;
  width: 100%;
}

.body-text {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Courier New', Courier, monospace;
  font-size: 24px;
  text-transform: capitalize;
  top: 43%;
  width: 80%;
  color: rgb(43, 54, 68);
  left: 11%;
  height: 40%;
  margin-bottom: 150px;
}

.jumbo {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  align-items: center;
  align-self: center;
  width: 100%;
  left: 100px;

}

.showcomments {
  margin-top: 10px;
  top: 500px;
  display: inline-block;
  left: 0em;
  color: #000;
}

/* title of the article */
.jumbo h1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: absolute;
  margin-bottom: 30px;
  top: 48px;
  width: 80%;
  text-transform: capitalize;
  color: rgb(43, 54, 68);
  font-size: 50px;
  font-weight: 600;
  transform: translate(30%, -10%);
}

.moment-on {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: center;
  position: relative;
  top: 126px;
  left: -8em;
  margin-top: 1em;
  color: rgb(43, 54, 68);
}

.date {
  position: relative;
  right: -8%;
  color: rgb(43, 54, 68);
  font-size: 22px;
  font-weight: 400;
}


.faEnvelope {
  position: relative;
  font-size: 22px;
  margin-left: 5px;
  font-weight: 400;
  color: rgb(43, 54, 68);
}

.post-edit {
  position: relative;
  top: 20px;
  height: 300px;
}

.oneArticle p {
  position: relative;
  top: -50px;
}


.oneArticle span {
  position: relative;
  top: 60px;
}


.callout h4 {
  position: relative;
  color: #fff;
  left: 0%;
  top: 10px;
  text-transform: uppercase;
}

.panel-default {
  width: 100% !important;
  display: flex;
  flex-direction: column;
  justify-content: center;
  left: 0em;
  position: relative;
}

.panel-body {
  padding: 1em;
  display: flex;
  width: 100%;
  position: relative;
  left: 0em;
  justify-content: center;
  flex-direction: column;
  background: rgb(201, 196, 196);
}


.callout.secondary {
  position: relative;
  top: 465px;
  margin-top: 120px;
  background: rgb(43, 54, 68);
  color: white;
  width: 84%;
  height: 250px;
  padding: 5px;
  display: inline-block;
}

.comment-list {
  list-style: none;
  margin: 0 0 50px 0;
}

.comment-list>li {
  margin: 0 0 20px 0;
  background: #333;
  padding: 20px;
}

.comment-user {
  display: flex;
  align-items: center;
  margin: 0 0 10px 0;
}

.comment-user-avatar-wrap {
  width: 40px;
  margin-right: 10px;
}

.comment-username {
  margin-right: 5px;
  color: white;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.on {
  margin-right: 5px;
}

.comment-text {
  background: white;
  color: #222;
  padding: 20px;
}

.comment-text :last-child {
  margin: 0;
}

textarea {
  color: #222;
  width: 80%;
  height: 100px;
}

.post-body {
  border: 2px solid silver;
  width: 100%;
  height: 100%;
  position: relative;
  background: #fff;
  left: 0em;
  margin-bottom: 0.5em;
}

.post-body .comm {
  width: 100%;
  position: relative;
  height: 100%;
  left: 0em;
  top: 0.1em;
  font-size: 1.2em;
  background: #fff;
  padding: 0.5em;
}

.post-footer-option li {
  float: left;
  margin-right: 50px;
  padding-bottom: 15px;
}

.post-footer-option li a {
  color: rgb(40, 41, 43);
  font-weight: 500;
  font-size: 1.3rem;
}

.photo-profile {
  border: 1px solid #DDD;
}

.anchor-username h4 {
  font-weight: bold;
}

.anchor-time {
  color: #ADB2BB;
  font-size: 1.2rem;
}

.post-footer {
  text-align: center;
  align-self: center;
  width: 100%
}

.post-footer hr {
  position: relative;
  top: -62px;
  left: -3em;
}

.post-footer-comment-wrapper {
  background-color: #F6F7F8;
}

.showComm {
  position: relative;
  top: 50px;
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 40px;
  justify-content: center;
  height: 100%;
  left: 0em;
}

.jumbotron {
  position: absolute;
  width: 100%;
  top: 50px;
  margin: 0px;
  text-align: center;
}

.row {
  width: 88%;
  margin: 0;
  z-index: 0;
  padding: 0;
  top: 402px;
  margin: 5.5em 1em 0em 1em;
  position: relative;
  display: inline-block;
}

ul>li {
  position: relative;
}


ul footer {
  width: 100%;
}

.jumbotron .footer-con {
  position: fixed;
  bottom: 0px;
  z-index: 1;
}

@media screen and (min-width: 300px) and (max-width: 550px) {

  .jumbotron {
    text-align: center;
    height: 100%;
  }

  .bodys {
    position: relative;
    display: inline-block;
    text-align: center;
  }

  .jumbo {
    display: inline-block;
    text-align: center;
    position: relative;
    left: 0px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;

  }

  .jumbo h1 {
    left: 0px;
  }

  .bodys h4 {
    left: 0px;
  }

  .author {
    right: 54%;
    top: 7px;
  }

  .moment-on {
    left: 0px;
    font-size: 0.8em;
  }

  .faEnvelope,
  .date {
    font-size: 1.4em;
  }

  .moment-on .clock {
    left: 6%;
  }

  .jumbotron p {
    font-size: 100%;
    top: 200px;
    margin-top: 1em;
  }

  .sharing {
    position: relative;
    top: 400px;
  }

  .pull-right {
    position: absolute;
    left: 12%;
    top: 455px;
    display: inline-block;
  }

  .bodys .secondary {
    display: inline-block;
    left: 0em;
    text-align: center;
    margin-top: 20px;
  }

  .secondary form {
    left: 0px;
  }

  .secondary h5 {
    left: 80%;
  }

  .showcomments {
    margin-top: 10px;
    top: 500px;
    display: inline-block;
    left: 0em;
    z-index: 0;
  }

  .showComm {
    left: 1em;
    width: 92%;
    margin: 0 0.5em;
  }

  .media-heading {
    top: 0px;
    left: 30%;
    text-transform: capitalize;
  }

  .footer {
    z-index: 200;

  }

  .footer .row {
    z-index: 0;
  }

  .footer-con {
    position: fixed;
    bottom: 0px;
  }

  .toTop img {
    height: 4.5em;
    top: -37px;
  }

}

@media screen and (min-width: 551px) and (max-width: 749px) {

  .jumbotron {
    text-align: center;
    height: 100%;
  }

  .bodys {
    position: relative;
    display: inline-block;
    text-align: center;
  }

  .jumbo {
    display: inline-block;
    text-align: center;
    position: relative;
    left: 0px;
  }

  .jumbo .art-title {
    left: 0px;
  }

  .sharing {
    position: relative;
    top: 400px;
  }

  .pull-right {
    margin-top: 1em;
    position: absolute;
    left: 21%;
    top: 441px;
    display: inline-block;
  }

  .bodys h4 {
    left: 0px;
  }

  .author {
    left: 18%;
    top: -32px;
  }

  .moment-on {
    left: 0px;
    font-size: 0.8em;
  }


  .moment-on .clock {
    left: 35px;
  }

  .jumbotron p {
    font-size: 100%;
    top: 200px;
  }

  .bodys .secondary {
    position: relative;
    display: inline-block;
    left: 0em;
    text-align: center;
    margin-top: 120px;
  }

  .secondary form {
    left: 0px;
  }

  .secondary h5 {
    left: 70%;
    display: inline-block;
    width: 105px;
    top: 17px;
  }

  .showcomments {
    margin-top: 10px;
    top: 500px;
    display: inline-block;
    left: 0em;
  }

  .showComm {
    left: 1em;
    width: 92%;
    margin: 0 0.5em;
  }

  .media-heading {
    top: 0px;
    left: 2.5em;
    text-transform: capitalize;
  }

  .footer {
    z-index: 200;

  }

  .footer .row {
    z-index: 200;
  }

  .footer-con {
    position: fixed;
    bottom: 0px;
  }

  .toTop img {
    height: 4.5em;
    top: -37px;
  }

}

@media (min-width: 750px) and (max-width: 950px) {
  .pull-right {
    margin: 1em 0em;
    top: 1035px;
  }

  .bodys h4 {
    right: 65%;
  }

  .moment-on .clock {
    left: 7%;
    position: relative;
  }

  .body-text {
    position: absolute;
    top: 23%;
    width: 80%;
    height: auto;
  }

  .sharing {
    position: relative;
    top: 550px;
  }

  .toTop img {
    height: 5em;
  }


}

